# libbpf-bootstrap

examples/c/: Makefile  net.bpf.c  net.c
examples/c/net2/: Makefile  net.c  net.h  netapi.h
examples/c/net2/bpf/: net.bpf.c
examples/rust/: Cargo.toml
examples/rust/xtrace/: Cargo.toml  Makefile  build.rs
examples/rust/xtrace/src/: main.rs  proto.rs
examples/rust/xtrace/src/bpf/: net.bpf.c  net.h
examples/rust/xtrace/src/lib/: net.c
