[package]
name = "xtrace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.24.8"
libc = "0.2"
structopt = "0.3"
ctrlc = "3.1"
object = "0.25"
plain = "0.2"
time = "0.3"
clap = {version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"]}

[build-dependencies]
libbpf-cargo = "0.24.8"
